--- a/index.html
+++ b/index.html
@@ -165,33 +165,53 @@
     // CONSTANTS
     const GIFT_FEED_URL = 'https://raw.githubusercontent.com/CandidQuality/dog-birthday-feed/main/dog-gifts.json'; // hidden from UI
 
-    // Elements$1renderHero();
+    // Elements
+    const el = id => document.getElementById(id);
+    const els = {
+      dogName: el('dogName'), dob: el('dob'), adultWeight: el('adultWeight'), adultWeightVal: el('adultWeightVal'),
+      chewer: el('chewer'), showEpi: el('showEpigenetic'), smooth: el('smoothMilestones'), breed: el('breed'), breedGroup: el('breedGroup'),
+      ignoreAge: el('ignoreAge'), ignoreSize: el('ignoreSize'), ignoreChewer: el('ignoreChewer'),
+      calcBtn: el('calcBtn'), resetBtn: el('resetBtn'), shareBtn: el('shareBtn'), sizeWarn: el('sizeWarn'),
+      nextHeadline: el('nextHeadline'), nextBday: el('nextBday'), nextBdayDelta: el('nextBdayDelta'),
+      dogAge: el('dogAge'), humanYears: el('humanYears'), slopeNote: el('slopeNote'),
+      addCal: el('addCalBtn'), remind: el('remindBtn'), addYearSeries: el('addYearSeries'),
+      loadGifts: el('loadGifts'), giftMeta: el('giftMeta'), gifts: el('gifts'), heroLine: el('heroLine'), profileLine: el('profileLine'), breedNotes: el('breedNotes'), epi: el('epi')
+    };
 
-    // --- Live breed/group notes (display-only)
+    // Personalized header
+    function possessive(n){ if(!n) return "your precious friend's"; const t=n.trim(); if(!t) return "your precious friend's"; return /s$/i.test(t)? `${t}’` : `${t}’s`; }
+    function renderHero(){ els.heroLine.textContent = `Let’s find out together what ${possessive(els.dogName.value)} birthdays are, so we can celebrate every single one.`; }
+    els.dogName.addEventListener('input', renderHero); renderHero();
+
+    // Live breed/group notes (display-only)
     function updateBreedNotes(){
       const name = els.dogName.value || 'your dog';
       const breedTxt = (els.breed.value||'').trim();
       const group = els.breedGroup.value;
       const lb = parseInt(els.adultWeight.value,10) || 55;
-      els.profileLine.textContent = `Profile: ${name}${breedTxt?` — ${breedTxt}`:''} • Group: ${group} • Weight: ${lb} lb`;
+      els.profileLine.textContent = `Profile: ${name}${breedTxt ? ' — ' + breedTxt : ''} • Group: ${group} • Weight: ${lb} lb`;
       const notes = GROUPS[group]||[]; els.breedNotes.innerHTML = notes.map(n=>`• ${n}`).join(' ');
     }
     ['input','change'].forEach(ev=>{
       els.breed.addEventListener(ev, updateBreedNotes);
       els.breedGroup.addEventListener(ev, updateBreedNotes);
       els.dogName.addEventListener(ev, updateBreedNotes);
+      els.adultWeight.addEventListener(ev, updateBreedNotes);
     });
     updateBreedNotes();
 
-    // Slider label (5‑lb steps)$1
+    // Slider label (5‑lb steps)
+    els.adultWeight.addEventListener('input', ()=> { const v = Math.round(parseInt(els.adultWeight.value,10)/5)*5; els.adultWeight.value = v; els.adultWeightVal.textContent = v; });
 
     // If gifts are showing, re-filter when relevant controls change
     function reloadGiftsIfShown(){ if(els.gifts && els.gifts.children && els.gifts.children.length>0){ loadGifts(); } }
-    els.adultWeight.addEventListener('change', reloadGiftsIfShown);
-    els.chewer.addEventListener('change', reloadGiftsIfShown);
-    els.ignoreAge.addEventListener('change', reloadGiftsIfShown);
-    els.ignoreSize.addEventListener('change', reloadGiftsIfShown);
-    els.ignoreChewer.addEventListener('change', reloadGiftsIfShown);
+    ['change'].forEach(ev=>{
+      els.adultWeight.addEventListener(ev, reloadGiftsIfShown);
+      els.chewer.addEventListener(ev, reloadGiftsIfShown);
+      els.ignoreAge.addEventListener(ev, reloadGiftsIfShown);
+      els.ignoreSize.addEventListener(ev, reloadGiftsIfShown);
+      els.ignoreChewer.addEventListener(ev, reloadGiftsIfShown);
+    });
 
     // Helpers
     function daysBetween(a,b){ return Math.floor((b - a) / (24*60*60*1000)); }
@@ -229,7 +249,20 @@
     function icsEvent(summary, start, end){ return `BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\nBEGIN:VEVENT\nUID:${Date.now()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${summary}\nEND:VEVENT\nEND:VCALENDAR`; }
     function downloadICS(name, ics){ const blob=new Blob([ics],{type:'text/calendar'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download=name; document.body.appendChild(a); a.click(); a.remove(); }
 
-    // Gift loader (URL hidden)$1
+    // Gift loader (URL hidden)
+    async function loadGifts(){
+      els.gifts.innerHTML=''; els.giftMeta.textContent='Loading…';
+      try{ const res = await fetch(GIFT_FEED_URL,{cache:'no-store'}); const items = await res.json(); const lb=parseInt(els.adultWeight.value,10);
+        const bucket = lb<20?'toy':lb<30?'small':lb<50?'medium':lb<90?'large':'giant'; const h = parseFloat(els.humanYears.textContent);
+        const filtered = items.filter(it=>{
+          let ok=true; if(!els.ignoreChewer.checked && it.chewer){ ok = ok && (it.chewer.toLowerCase()===els.chewer.value.toLowerCase() || it.chewer==='any'); }
+          if(!els.ignoreSize.checked && it.size){ ok = ok && (it.size.includes(bucket)||it.size.includes('any')); }
+          if(!isNaN(h) && !els.ignoreAge.checked){ if(it.minHumanYears!=null) ok = ok && h>=it.minHumanYears; if(it.maxHumanYears!=null) ok = ok && h<=it.maxHumanYears; }
+          return ok; }).slice(0,9);
+        els.giftMeta.textContent = `Showing ${filtered.length} picks`;
+        els.gifts.innerHTML = filtered.map(it=>`<div class="gift"><h4>${it.title}</h4><div class="muted">${it.tag||''}</div><div style="margin-top:8px"><a class="link" href="${it.url}" target="_blank" rel="noopener">View</a></div></div>`).join('');
+      }catch(e){ els.giftMeta.textContent='Could not load gift ideas.'; }
+    }
 
     // CALCULATE
     const updateWeightLabel = ()=> els.adultWeightVal.textContent = els.adultWeight.value; updateWeightLabel();
@@ -252,26 +285,25 @@
       const nbd = nextDogYearDate(dob, H, lb, els.smooth.checked); els.nextBday.textContent = nbd.toDateString(); const daysTo = daysBetween(now, nbd); els.nextBdayDelta.textContent = daysTo>0? `${daysTo} days from now` : '';
 
       // Profile & notes
-      const breedTxt=(els.breed.value||'').trim(); const group=els.breedGroup.value; els.profileLine.textContent = `Profile: ${name}${breedTxt?` — ${breedTxt}`:''} • Group: ${group} • Weight: ${lb} lb`;
+      const breedTxt=(els.breed.value||'').trim(); const group=els.breedGroup.value; els.profileLine.textContent = `Profile: ${name}${breedTxt ? ' — ' + breedTxt : ''} • Group: ${group} • Weight: ${lb} lb`;
       const notes = GROUPS[group]||[]; els.breedNotes.innerHTML = notes.map(n=>`• ${n}`).join(' ');
 
       // Gentle mismatch warning
       let warn=''; if(group.includes('Toy') && lb>30) warn='Breed group "Toy" but weight > 30 lb. Math stays weight‑based.'; if((group.includes('Guardian')||group.includes('Working')) && lb<20) warn='Breed group suggests large/giant, but weight < 20 lb. Math stays weight‑based.'; els.sizeWarn.style.display = warn? 'block':'none'; els.sizeWarn.textContent = warn;
 
       // Gift meta
-      els.giftMeta.textContent = `Gift picks for ${name} — by weight ${lb} lb${breedTxt?`, ${breedTxt}`:''}`;
+      els.giftMeta.textContent = `Gift picks for ${name} — by weight ${lb} lb${breedTxt ? ', ' + breedTxt : ''}`;
 
       // Celebrate
       els.nextBday.scrollIntoView({behavior:'smooth', block:'center'}); confetti();
 
-      // If user already opened gifts once, keep them in sync after a new calculation
-      reloadGiftsIfShown();
-    }); confetti();
+      // Keep gifts in sync if already loaded
+      if(els.gifts.children.length) loadGifts();
     }
 
     // EVENTS
     els.calcBtn.addEventListener('click', compute);
-    els.resetBtn.addEventListener('click', ()=>{ els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; updateWeightLabel(); els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextHeadline.textContent='—'; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; renderHero(); });
+    els.resetBtn.addEventListener('click', ()=>{ els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; updateWeightLabel(); els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextHeadline.textContent='—'; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; renderHero(); updateBreedNotes(); });
     els.shareBtn.addEventListener('click', ()=>{ const p=new URLSearchParams({ n:els.dogName.value||'', d:els.dob.value||'', w:els.adultWeight.value, c:els.chewer.value, g:els.breedGroup.value, r:els.breed.value||'', s:els.smooth.checked?1:0, e:els.showEpi.checked?1:0 }); const url=location.origin+location.pathname+'?'+p.toString(); navigator.clipboard.writeText(url).then(()=>alert('Shareable link copied.')).catch(()=>alert(url)); });
 
     // ICS buttons
@@ -282,8 +314,8 @@
     // Gift loader
     els.loadGifts.addEventListener('click', loadGifts);
 
-    // Hydrate from QS (no auto compute)
-    (function initFromQS(){ const q=new URLSearchParams(location.search); if(q.size){ els.dogName.value=q.get('n')||''; els.dob.value=q.get('d')||''; els.adultWeight.value=q.get('w')||55; els.adultWeightVal.textContent=els.adultWeight.value; els.chewer.value=q.get('c')||'Normal'; els.breedGroup.value=q.get('g')||'Working / Herding'; els.breed.value=q.get('r')||''; els.smooth.checked=q.get('s')==='1'; els.showEpi.checked=q.get('e')==='1'; renderHero(); } })();
+    // QS hydrate (no auto compute)
+    (function initFromQS(){ const q=new URLSearchParams(location.search); if(q.size){ els.dogName.value=q.get('n')||''; els.dob.value=q.get('d')||''; els.adultWeight.value=q.get('w')||55; els.adultWeightVal.textContent=els.adultWeight.value; els.chewer.value=q.get('c')||'Normal'; els.breedGroup.value=q.get('g')||'Working / Herding'; els.breed.value=q.get('r')||''; els.smooth.checked=q.get('s')==='1'; els.showEpi.checked=q.get('e')==='1'; renderHero(); updateBreedNotes(); } })();
   </script>
 </body>
 </html>
