--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     .hero{margin:4px 0 0 44px}
     .warn{background:rgba(255,107,107,.1);border:1px solid var(--danger);color:var(--danger);padding:8px 10px;border-radius:10px;margin:8px 0}
     .primary{outline:2px solid var(--brand);}
+    /* Plan lanes */
+    .plan{margin-top:12px}
+    .lane{border:1px solid var(--border);border-radius:12px;padding:12px;margin:8px 0;background:linear-gradient(180deg,rgba(255,255,255,.02),rgba(0,0,0,.04))}
+    .lane h4{margin:0 0 6px;font-size:15px;color:var(--muted)}
+    .lane ul{margin:0;padding-left:18px}
+    .lane li{margin:4px 0}
   </style>
 </head>
 <body>
@@ -109,6 +115,7 @@
             <option>Companion</option>
             <option>Mixed / Other</option>
           </select>
+          <div id="breedExamples" class="muted" style="margin-top:6px"></div>
         </div>
       </div>
 
@@ -147,6 +154,11 @@
 
       <div class="divider"></div>
 
+      <h2 id="nextPlanHeading">Next Birthday Plan</h2>
+      <div id="nextPlan" class="plan"></div>
+
+      <div class="divider"></div>
+
       <h2>Gift ideas</h2>
       <button id="loadGifts" class="btn secondary" type="button">Load gift ideas</button>
       <div id="giftMeta" class="muted" style="margin:8px 0"></div>
@@ -162,10 +174,23 @@
     toggleBtn.textContent = savedTheme === 'light' ? '🌙 Dark' : '☀️ Light';
     toggleBtn.addEventListener('click', () => { const now = root.getAttribute('data-theme') === 'light' ? 'dark' : 'light'; root.setAttribute('data-theme', now); localStorage.setItem('barkday-theme', now); toggleBtn.textContent = now === 'light' ? '🌙 Dark' : '☀️ Light'; });
 
-    // CONSTANTS
-    const GIFT_FEED_URL = 'https://raw.githubusercontent.com/CandidQuality/dog-birthday-feed/main/dog-gifts.json'; // hidden from UI
+    // CONSTANTS (hidden URLs)
+    const GIFT_FEED_URL = 'https://raw.githubusercontent.com/CandidQuality/dog-birthday-feed/main/dog-gifts.json';
 
-    // --- Breed notes (display only) — declared BEFORE any use
+    // --- Breed group metadata (desc + examples)
+    const GROUP_META = {
+      'Working / Herding': { desc:'High-drive problem solvers; thrive on jobs.', examples:['Border Collie','Australian Shepherd','German Shepherd','Belgian Malinois','Corgi'] },
+      'Sporting': { desc:'Endurance + retrieving backgrounds; water-confident.', examples:['Labrador','Golden Retriever','Vizsla','GSP','Setter'] },
+      'Hound': { desc:'Scent/sight specialists; independent.', examples:['Beagle','Dachshund','Greyhound','Foxhound','Basset'] },
+      'Terrier': { desc:'Tenacious hunters; love dig/chase games.', examples:['JRT','Westie','Airedale','Border Terrier'] },
+      'Toy': { desc:'Small frames; fragile joints; big personalities.', examples:['Chihuahua','Pomeranian','Yorkie','Maltese','Papillon'] },
+      'Non‑Sporting': { desc:'Mixed roles; needs vary widely.', examples:['Bulldog','Dalmatian','Poodle (Std)','Boston Terrier'] },
+      'Guardian': { desc:'Large/giant protectors; joint management matters.', examples:['Rottweiler','Mastiff','Great Dane','Anatolian','Kuvasz'] },
+      'Companion': { desc:'Human‑bonded; thrive on routines.', examples:['Cavapoo','Cockapoo','Shih Tzu','Havanese'] },
+      'Mixed / Other': { desc:'Profile by observed drive & size.', examples:['Mixed-breed','Rescue','Unknown lineage'] }
+    };
+
+    // --- Breed notes (display only)
     const GROUPS = {
       'Working / Herding':['High drive: daily jobs/puzzles (herding games, scentwork, obedience chains).','Mental fatigue matters as much as physical; enrichment like snuffle mats and hide‑and‑seek.','Prevent under‑stimulation → boredom behaviors.'],
       'Sporting':['Endurance + retrieve instincts: structured fetch, dock diving, field games.','Watch weight gain; meal‑prep measured portions.'],
@@ -196,7 +221,7 @@
     function renderHero(){ els.heroLine.textContent = `Let’s find out together what ${possessive(els.dogName.value)} birthdays are, so we can celebrate every single one.`; }
     els.dogName.addEventListener('input', renderHero); renderHero();
 
-    // Live breed/group notes (display-only)
+    // Live breed/group notes + examples
     function updateBreedNotes(){
       const name = els.dogName.value || 'your dog';
       const breedTxt = (els.breed.value||'').trim();
@@ -204,6 +229,9 @@
       const lb = parseInt(els.adultWeight.value,10) || 55;
       els.profileLine.textContent = `Profile: ${name}${breedTxt ? ' — ' + breedTxt : ''} • Group: ${group} • Weight: ${lb} lb`;
       const notes = GROUPS[group]||[]; els.breedNotes.innerHTML = notes.map(n=>`• ${n}`).join(' ');
+      const meta = GROUP_META[group];
+      const bx = document.getElementById('breedExamples');
+      if(bx){ bx.textContent = meta ? `${meta.desc} Examples: ${meta.examples.join(', ')}` : ''; }
     }
     ['input','change'].forEach(ev=>{
       els.breed.addEventListener(ev, updateBreedNotes);
@@ -234,7 +262,8 @@
     function slopeFromWeight(lb){ const w = clamp(lb, 5, 200); if(w <= 20) return 5; if(w <= 50) return 5 + (w-20)*(1/30); if(w <= 90) return 6 + (w-50)*(1/40); return 7 + (w-90)*(0.2/110); }
     function smoothBlend(x, center, width){ const t = clamp((x - (center - width/2)) / width, 0, 1); return t*t*(3 - 2*t); }
     function humanEqYears(tYears, lb, useSmooth){ const R = slopeFromWeight(lb); if(!useSmooth){ if(tYears <= 1) return 15*tYears; if(tYears <= 2) return 15 + 9*(tYears-1); return 24 + R*(tYears-2); } const f1 = smoothBlend(tYears, 1, 0.25); const slope12 = 15 + f1*(9-15); if(tYears <= 2){ const part0 = Math.min(tYears,1)*15; const part1 = tYears>1 ? (tYears-1)*slope12 : 0; return part0 + part1; } const f2 = smoothBlend(tYears, 2, 0.5); const slopePost = 9 + f2*(R-9); const upTo2 = humanEqYears(2, lb, true); return upTo2 + (tYears-2)*slopePost; }
-    function nextDogYearDate(dob, currentHumanEq, lb, useSmooth){ const target = Math.floor(currentHumanEq) + 1; const now = new Date(); const yearsNow = daysBetween(dob, now) / 365.2425; let lo = yearsNow, hi = yearsNow + 5; for(let i=0;i<40;i++){ const mid=(lo+hi)/2; const h=humanEqYears(mid, lb, useSmooth); if(h>=target) hi=mid; else lo=mid; } const t=(lo+hi)/2; return new Date(dob.getTime() + t*365.2425*24*60*60*1000); }
+    function nextDogYearDate(dob, currentHumanEq, lb, useSmooth){ // next integer of DOG‑YEARS (human‑equivalent scale); 15 dog‑birthdays in first calendar year
+      const target = Math.floor(currentHumanEq) + 1; const now = new Date(); const yearsNow = daysBetween(dob, now) / 365.2425; let lo = yearsNow, hi = yearsNow + 5; for(let i=0;i<40;i++){ const mid=(lo+hi)/2; const h=humanEqYears(mid, lb, useSmooth); if(h>=target) hi=mid; else lo=mid; } const t=(lo+hi)/2; return new Date(dob.getTime() + t*365.2425*24*60*60*1000); }
 
     // Confetti (multi‑color)
     function confetti(durationMs=1700){
@@ -264,6 +293,82 @@
       }catch(e){ els.giftMeta.textContent='Could not load gift ideas.'; }
     }
 
+    // ===================== Embedded Recommendation Matrix (DOG‑YEARS)
+    // Schema: { group: { dogYear:int -> { lanes:{training:[],health:[],nutrition:[],exercise:[],bonding:[],gear:[]} } } }
+    const RECO = {
+      "Working / Herding": {
+        1:{ lanes:{
+          training:["Solidify recall on a 30–50 ft line","Add impulse control: door/food releases","Introduce scent puzzles twice weekly"],
+          health:["Finish core vaccines / boosters if pending","Discuss spay/neuter timing with vet","Baseline hip/elbow discussion for large lines"],
+          nutrition:["Transition to adult formula when growth complete","Measure meals; target ideal BCS 4–5/9"],
+          exercise:["2 x 30–45 min structured walks","Short herding-style games without over-arousal"],
+          bonding:["Hide‑and‑seek indoors","Name recognition games with family"],
+          gear:["Long‑line (biothane)","Treat pouch with magnet closure"] } },
+        2:{ lanes:{
+          training:["Loose leash with distractions (add ‘leave it’)","Start duration place/stay to 10–15 min"],
+          health:["Annual exam & dental check","Hip/elbow X‑ray if symptomatic/high‑risk"],
+          nutrition:["Maintain protein 24–28% (dry matter) depending on output","Add omega‑3s if coat/dry skin issues"],
+          exercise:["Daily brain work: 15–20 min scentwork","Two high‑quality fetch sessions/week, flat ground"],
+          bonding:["Trick chaining (spin→bow→place)","Field trips to calm public spaces"],
+          gear:["Puzzle feeder (level 2)","High‑visibility collar for off‑lead fields"] } },
+        4:{ lanes:{
+          training:["Proof off‑lead recall in fenced area","Refine heel with variable pace"],
+          health:["Pro dental cleaning if tartar present","Joint baseline: range‑of‑motion notes"],
+          nutrition:["Evaluate joint support (glucosamine/chondroitin) for >50 lb"],
+          exercise:["Add low‑impact swim day biweekly","Avoid repetitive high jumps"],
+          bonding:["Team task: carry soft pack (≤10% BW) on hikes"],
+          gear:["Swim vest (if new to water)","Soft‑fit pack with chest load"] } },
+        7:{ lanes:{
+          training:["Short, positive refreshers; avoid frustration windows"],
+          health:["Senior labs baseline (CBC/Chem/UA)","Arthritis check; start joint plan if stiff"],
+          nutrition:["Slight calorie reduction if activity dips","EPA/DHA for joints & cognition"],
+          exercise:["More warm‑ups; surface changes for proprioception"],
+          bonding:["Scent trails in yard (5–8 hides)"],
+          gear:["Orthopedic bed","Non‑slip indoor runners"] } },
+        10:{ lanes:{
+          training:["Cognitive games over high‑impact drills"],
+          health:["Biannual vet checks","Eye/heart screening if breed‑linked"],
+          nutrition:["Senior formula or tailored macros; monitor muscle mass"],
+          exercise:["Short, frequent walks; gentle hill work"],
+          bonding:["Massage / calm brushing routines"],
+          gear:["Lightweight ramp","Support harness for car/steps"] } }
+      },
+      "Sporting": {
+        1:{ lanes:{ training:["Retrieve manners: hold/drop on cue","Intro steadiness before fetch release"], health:["Heartworm/flea plan","Ear care routine after wet work"], nutrition:["Puppy→adult when plates close"], exercise:["Endurance walks; avoid forced long runs"], bonding:["Dock entry confidence (ramp into water)"], gear:["Bumper dummy","Ear‑drying wipes"] } },
+        5:{ lanes:{ training:["Blind retrieves (short) with scent assist"], health:["Dental cleaning cadence 12–18 mo"], nutrition:["Monitor treat creep; weigh monthly"], exercise:["Swim intervals vs repetitive fetch"], bonding:["Field search games (3–5 marks)"], gear:["Neoprene vest for cold swims"] } }
+      },
+      "Toy": {
+        1:{ lanes:{ training:["Handling desensitization (paws/ears/mouth)","Carrier/teacup‑crate comfort"], health:["Patella check plan","Dental brushing every other day"], nutrition:["Small‑breed kibble; avoid hypoglycemia (small meals)"], exercise:["Short play bursts; avoid high jumps"], bonding:["Mat training for cafes"], gear:["Y‑front harness","Soft‑mesh stairs/ramps"] } },
+        8:{ lanes:{ training:["Nosework indoors; no jumping"], health:["Dental every 12 months typical","Tracheal sensitivity watch (collar→harness)"], nutrition:["High‑palatability senior diet if picky"], exercise:["Multiple 10–15 min walks"], bonding:["Lickmats; massage sessions"], gear:["Heated bed (thermo‑safe)"] } }
+      }
+    };
+
+    function planFor(group, dogYears){
+      const g = RECO[group] || RECO['Mixed / Other'] || {};
+      if(g[dogYears]) return g[dogYears];
+      const keys = Object.keys(g).map(k=>parseInt(k,10)).sort((a,b)=>a-b);
+      if(!keys.length) return null; let lower=null, upper=null; for(const k of keys){ if(k <= dogYears) lower=k; if(k >= dogYears && upper===null) upper=k; }
+      const chosen = (lower!==null)? lower : upper; return g[chosen]||null;
+    }
+
+    function renderPlan(group, upcomingDogYears){
+      const container = document.getElementById('nextPlan'); if(!container) return;
+      container.innerHTML = '';
+      const heading = document.getElementById('nextPlanHeading');
+      if(heading){ heading.textContent = `Next Birthday Plan — turning ${upcomingDogYears} (dog‑years)`; }
+      const p = planFor(group, upcomingDogYears);
+      if(!p){ container.innerHTML = '<div class="muted">Recommendations coming soon for this group.</div>'; return; }
+      const order = [ ['training','Training & Enrichment'], ['health','Health & Wellness'], ['nutrition','Diet & Nutrition'], ['exercise','Exercise Needs'], ['bonding','Play & Bonding Ideas'], ['gear','Helpful Gear (optional)'] ];
+      for(const [key,label] of order){
+        const items = (p.lanes && p.lanes[key]) ? p.lanes[key] : [];
+        if(!items.length) continue;
+        const lane = document.createElement('div'); lane.className = 'lane';
+        lane.innerHTML = `<h4>${label}</h4>`;
+        const ul = document.createElement('ul'); items.forEach(t=>{ const li=document.createElement('li'); li.textContent=t; ul.appendChild(li); });
+        lane.appendChild(ul); container.appendChild(lane);
+      }
+    }
+
     // CALCULATE
     const updateWeightLabel = ()=> els.adultWeightVal.textContent = els.adultWeight.value; updateWeightLabel();
 
@@ -272,16 +377,17 @@
       const dob = new Date(dobStr); const now = new Date(); if(isNaN(dob.getTime()) || dob>now){ alert('Birthdate is invalid.'); return; }
       const lb = parseInt(els.adultWeight.value,10);
 
-      // Age now
+      // Age now (chronological)
       const days = daysBetween(dob, now); const years = days/365.2425; const yrs=Math.floor(years); const months=Math.floor((years%1)*12);
       els.dogAge.textContent = `${yrs}y ${months}m`;
 
-      // Human‑equivalent
+      // Human‑equivalent DOG‑YEARS
       const H = humanEqYears(years, lb, els.smooth.checked); els.humanYears.textContent = H.toFixed(2); const R = slopeFromWeight(lb); els.slopeNote.textContent = `R≈${R.toFixed(2)} (weight‑continuous)`;
 
-      // Next dog‑year (primary)
+      // Next dog‑year birthday (DOG‑YEARS integer)
       const name = els.dogName.value || 'your dog';
-      const upcoming = Math.floor(H)+1; els.nextHeadline.textContent = `${name} is about to be ${upcoming} years old!`;
+      const upcoming = Math.floor(H)+1; // 15 dog‑birthdays within first calendar year is intended by the 15/9 rule
+      els.nextHeadline.textContent = `${name} is about to be ${upcoming} years old!`;
       const nbd = nextDogYearDate(dob, H, lb, els.smooth.checked); els.nextBday.textContent = nbd.toDateString(); const daysTo = daysBetween(now, nbd); els.nextBdayDelta.textContent = daysTo>0? `${daysTo} days from now` : '';
 
       // Profile & notes
@@ -294,8 +400,9 @@
       // Gift meta
       els.giftMeta.textContent = `Gift picks for ${name} — by weight ${lb} lb${breedTxt ? ', ' + breedTxt : ''}`;
 
-      // Celebrate
+      // Celebrate + Plan
       els.nextBday.scrollIntoView({behavior:'smooth', block:'center'}); confetti();
+      renderPlan(group, upcoming); // feed DOG‑YEARS integer
 
       // Keep gifts in sync if already loaded
       if(els.gifts.children.length) loadGifts();
@@ -303,13 +410,13 @@
 
     // EVENTS
     els.calcBtn.addEventListener('click', compute);
-    els.resetBtn.addEventListener('click', ()=>{ els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; updateWeightLabel(); els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextHeadline.textContent='—'; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; renderHero(); updateBreedNotes(); });
+    els.resetBtn.addEventListener('click', ()=>{ els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; updateWeightLabel(); els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextHeadline.textContent='—'; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; document.getElementById('nextPlan').innerHTML=''; document.getElementById('nextPlanHeading').textContent='Next Birthday Plan'; renderHero(); updateBreedNotes(); });
     els.shareBtn.addEventListener('click', ()=>{ const p=new URLSearchParams({ n:els.dogName.value||'', d:els.dob.value||'', w:els.adultWeight.value, c:els.chewer.value, g:els.breedGroup.value, r:els.breed.value||'', s:els.smooth.checked?1:0, e:els.showEpi.checked?1:0 }); const url=location.origin+location.pathname+'?'+p.toString(); navigator.clipboard.writeText(url).then(()=>alert('Shareable link copied.')).catch(()=>alert(url)); });
 
     // ICS buttons
     els.addCal.addEventListener('click', ()=>{ if(!els.nextBday.textContent || els.nextBday.textContent==='—'){ alert('Calculate first.'); return; } const start=new Date(els.nextBday.textContent); const end=new Date(start.getTime()+60*60*1000); const name=els.dogName.value||'Your dog'; downloadICS('barkday.ics', icsEvent(`${name} — Next Dog‑Year Birthday`, start, end)); });
     els.remind.addEventListener('click', ()=> alert('Reminder integration placeholder: add 1‑week reminder.'));
-    els.addYearSeries.addEventListener('click', ()=>{ if(!els.dob.value){ alert('Calculate first.'); return; } const name=els.dogName.value||'Your dog'; const dob=new Date(els.dob.value); const lb=parseInt(els.adultWeight.value,10); const now=new Date(); const years=daysBetween(dob, now)/365.2425; const H=humanEqYears(years, lb, els.smooth.checked); let cur=nextDogYearDate(dob, H, lb, els.smooth.checked); let human=Math.floor(H)+1; let ics='BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\n'; for(let i=0;i<3;i++){ const start=cur; const end=new Date(start.getTime()+60*60*1000); ics+=`BEGIN:VEVENT\nUID:${Date.now()+Math.random()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Dog‑Year ${human}\nEND:VEVENT\n`; human++; cur=nextDogYearDate(dob, human-1, lb, els.smooth.checked); } ics+='END:VCALENDAR'; downloadICS('barkday_series.ics', ics); });
+    els.addYearSeries.addEventListener('click', ()=>{ if(!els.dob.value){ alert('Calculate first.'); return; } const name=els.dogName.value||'Your dog'; const dob=new Date(els.dob.value); const lb=parseInt(els.adultWeight.value,10); const now=new Date(); const years=daysBetween(dob, now)/365.2425; const H=humanEqYears(years, lb, els.smooth.checked); let cur=nextDogYearDate(dob, H, lb, els.smooth.checked); let dogYears=Math.floor(H)+1; let ics='BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\n'; for(let i=0;i<3;i++){ const start=cur; const end=new Date(start.getTime()+60*60*1000); ics+=`BEGIN:VEVENT\nUID:${Date.now()+Math.random()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Dog‑Year ${dogYears}\nEND:VEVENT\n`; dogYears++; cur=nextDogYearDate(dob, dogYears-1, lb, els.smooth.checked); } ics+='END:VCALENDAR'; downloadICS('barkday_series.ics', ics); });
 
     // Gift loader
     els.loadGifts.addEventListener('click', loadGifts);
